Add concurrent npm commands for full dev setup

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1 class="text-lg font-semibold">Personal portfolio</h1>
+    <h1 class="text-2xl font-semibold">Personal portfolio</h1>
   </header>
   <script type="module" src="./src/main.js"></script>
 </body>
