--- a/index.html
+++ b/index.html
@@ -1,53 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Portfolio</title>
 </head>
+
 <body>
   <!--#include file="./src/pages/projects.html" -->
-  <header>
-    <h1 id="intro" class="text-2xl font-semibold text-gray-800">Daniel Moderiano</h1>
-    <!-- Navbar provides HTML bookmark links to scroll down page to section -->
-    <nav>
-      <ul class="flex items-center">
-        <li class="px-2">
-          <a class="hover:underline" href="#intro">Intro</a>
-        </li>
-        <li class="px-2">
-          <a class="hover:underline" href="#about">About</a>
-        </li>
-        <li class="px-2">
-          <a class="hover:underline" href="#projects">Projects</a>
-        </li>
-        <li class="px-2">
-          <a class="hover:underline" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="intro">
-      <h2 class="text-xl font-semibold text-gray-800">Intro</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vero nisi. Quidem doloribus voluptatibus architecto natus unde rem libero laboriosam totam deleniti nemo, impedit, ducimus id nobis, alias aspernatur similique?</p>
-    </section>
-    <section id="about">
-      <h2 class="text-xl font-semibold text-gray-800">About</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vero nisi. Quidem doloribus voluptatibus architecto natus unde rem libero laboriosam totam deleniti nemo, impedit, ducimus id nobis, alias aspernatur similique?</p>
-    </section>
-    <section id="projects">
-      <h2 class="text-xl font-semibold text-gray-800">Projects</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vero nisi. Quidem doloribus voluptatibus architecto natus unde rem libero laboriosam totam deleniti nemo, impedit, ducimus id nobis, alias aspernatur similique?</p>
-    </section>
-    <section id="contact">
-      <h2 class="text-xl font-semibold text-gray-800">Contact</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vero nisi. Quidem doloribus voluptatibus architecto natus unde rem libero laboriosam totam deleniti nemo, impedit, ducimus id nobis, alias aspernatur similique?</p>
-    </section>
-  </main>
-  <footer>
-    <p class="text-gray-700 text-sm">&copy; 2022 Daniel Moderiano</p>
-  </footer>
+  <div class="flex items-center flex-col mx-12">
+
+    <header>
+      <h1 id="intro" class="text-2xl font-semibold text-gray-800">Daniel Moderiano</h1>
+      <!-- Navbar provides HTML bookmark links to scroll down page to section -->
+      <nav>
+        <ul class="flex items-center">
+          <li class="px-2">
+            <a class="hover:underline" href="#intro">Intro</a>
+          </li>
+          <li class="px-2">
+            <a class="hover:underline" href="#skills">Skills</a>
+          </li>
+          <li class="px-2">
+            <a class="hover:underline" href="#projects">Projects</a>
+          </li>
+          <li class="px-2">
+            <a class="hover:underline" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="intro">
+        <h2 class="text-xl font-semibold text-gray-800">Daniel Moderiano</h2>
+        <p>Full stack web developer</p>
+      </section>
+      <section id="skills">
+        <h2 class="text-xl font-semibold text-gray-800">Skills</h2>
+        <h3>Frontend</h3>
+        <ul>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="w-10">
+              <path
+                d="M0 32l34.9 395.8L191.5 480l157.6-52.2L384 32H0zm308.2 127.9H124.4l4.1 49.4h175.6l-13.6 148.4-97.9 27v.3h-1.1l-98.7-27.3-6-75.8h47.7L138 320l53.5 14.5 53.7-14.5 6-62.2H84.3L71.5 112.2h241.1l-4.4 47.7z" />
+            </svg>
+            <span>HTML</span>
+          </li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="w-10">
+              <path
+                d="M0 32l34.9 395.8L192 480l157.1-52.2L384 32H0zm313.1 80l-4.8 47.3L193 208.6l-.3.1h111.5l-12.8 146.6-98.2 28.7-98.8-29.2-6.4-73.9h48.9l3.2 38.3 52.6 13.3 54.7-15.4 3.7-61.6-166.3-.5v-.1l-.2.1-3.6-46.3L193.1 162l6.5-2.7H76.7L70.9 112h242.2z" />
+            </svg>
+            <span>CSS</span>
+          </li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 630 630" class="w-10">
+              <rect width="630" height="630" fill="#f7df1e" />
+              <path
+                d="m423.2 492.19c12.69 20.72 29.2 35.95 58.4 35.95 24.53 0 40.2-12.26 40.2-29.2 0-20.3-16.1-27.49-43.1-39.3l-14.8-6.35c-42.72-18.2-71.1-41-71.1-89.2 0-44.4 33.83-78.2 86.7-78.2 37.64 0 64.7 13.1 84.2 47.4l-46.1 29.6c-10.15-18.2-21.1-25.37-38.1-25.37-17.34 0-28.33 11-28.33 25.37 0 17.76 11 24.95 36.4 35.95l14.8 6.34c50.3 21.57 78.7 43.56 78.7 93 0 53.3-41.87 82.5-98.1 82.5-54.98 0-90.5-26.2-107.88-60.54zm-209.13 5.13c9.3 16.5 17.76 30.45 38.1 30.45 19.45 0 31.72-7.61 31.72-37.2v-201.3h59.2v202.1c0 61.3-35.94 89.2-88.4 89.2-47.4 0-74.85-24.53-88.81-54.075z" />
+            </svg>
+            <span>JavaScript</span>
+          </li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.5 -10.23174 23 20.46348" class="w-10">
+              <circle cx="0" cy="0" r="2.05" fill="#61dafb" />
+              <g stroke="#61dafb" stroke-width="1" fill="none">
+                <ellipse rx="11" ry="4.2" />
+                <ellipse rx="11" ry="4.2" transform="rotate(60)" />
+                <ellipse rx="11" ry="4.2" transform="rotate(120)" />
+              </g>
+            </svg>
+            <span>React</span>
+          </li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 774 875.7" class="w-10">
+              <path fill="#FFF" d="M387 0l387 218.9v437.9L387 875.7 0 656.8V218.9z" />
+              <path fill="#8ed6fb"
+                d="M704.9 641.7L399.8 814.3V679.9l190.1-104.6 115 66.4zm20.9-18.9V261.9l-111.6 64.5v232l111.6 64.4zM67.9 641.7L373 814.3V679.9L182.8 575.3 67.9 641.7zM47 622.8V261.9l111.6 64.5v232L47 622.8zm13.1-384.3L373 61.5v129.9L172.5 301.7l-1.6.9-110.8-64.1zm652.6 0l-312.9-177v129.9l200.5 110.2 1.6.9 110.8-64z" />
+              <path fill="#1c78c0"
+                d="M373 649.3L185.4 546.1V341.8L373 450.1v199.2zm26.8 0l187.6-103.1V341.8L399.8 450.1v199.2zm-13.4-207zM198.1 318.2l188.3-103.5 188.3 103.5-188.3 108.7-188.3-108.7z" />
+            </svg>
+            <span>Webpack</span>
+          </li>
+          <li>
+            <svg width="48" height="21" viewBox="0 0 48 21" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10">
+              <path
+                d="M32.428 0L32.278 0.782C32.046 2.264 32.13 2.688 32.766 3.238L33.38 3.746L32.744 6.582C32.364 8.274 31.898 9.692 31.602 10.158C31.348 10.56 31.052 11.152 30.988 11.47C30.882 11.85 30.522 12.232 29.972 12.57C29.486 12.846 28.532 13.586 27.856 14.18C27.316 14.666 26.944 14.964 26.742 15.092L26.082 15.614C25.9123 15.8657 25.7846 16.1433 25.704 16.436C25.658 16.65 25.684 16.792 25.752 16.896C25.818 16.996 25.932 17.066 26.088 17.11C26.2727 17.1533 26.4628 17.1688 26.652 17.156C27.0801 17.1267 27.5039 17.0517 27.916 16.932C28.056 16.894 28.166 16.858 28.262 16.826C28.41 16.644 28.752 16.3 29.358 15.702C30.966 14.116 31.58 13.248 30.946 13.482C30.712 13.566 30.818 13.354 31.22 12.93C32.068 12.104 32.554 10.856 33.57 6.942C34.374 3.852 34.374 3.808 34.966 3.808C35.244 3.808 36.03 3.856 36.03 3.856V0H34.226H32.428ZM40.106 6.33C39.978 6.33 39.766 6.522 39.64 6.734C39.408 7.114 39.682 7.346 43.174 9.526C45.248 10.84 46.92 11.96 46.878 12.046C46.836 12.108 45.142 13.21 43.112 14.48C39.428 16.764 39.408 16.786 39.746 17.252C40.17 17.802 39.746 17.992 44.528 15.008L48 12.786V11.114L44.126 8.722C42.032 7.41 40.212 6.352 40.106 6.33ZM7.936 6.564C7.83 6.564 6.01 7.644 3.916 8.934L0 11.326V12.998L3.894 15.432C6.054 16.764 7.874 17.866 7.958 17.866C8.042 17.866 8.212 17.674 8.382 17.442C8.636 17.04 8.422 16.87 4.846 14.606C1.44 12.468 1.08 12.172 1.42 11.94C1.632 11.792 3.24 10.796 4.976 9.718C8.934 7.284 8.722 7.452 8.404 6.944C8.278 6.734 8.064 6.544 7.938 6.564H7.936ZM25.304 6.61C24.72 6.606 23.464 7.496 19.704 10.566C19.542 10.952 19.528 11.218 19.602 11.39C19.65 11.508 19.738 11.59 19.86 11.65C19.98 11.71 20.136 11.746 20.308 11.76C20.65 11.79 21.054 11.736 21.38 11.672L21.6 11.622C21.6753 11.521 21.7742 11.44 21.888 11.386C22.12 11.258 23.094 10.37 24.068 9.418C25.782 7.682 26.184 6.898 25.486 6.644C25.4287 6.62122 25.3676 6.60967 25.306 6.61H25.304ZM29.696 7.816C29.182 7.83 28.256 8.426 26.67 9.692C25.874 10.338 25.37 10.686 25.1 10.758L24.052 11.586C23.658 12.306 23.6 12.752 23.704 12.998C23.73 13.0587 23.7678 13.1136 23.8152 13.1596C23.8626 13.2056 23.9186 13.2418 23.98 13.266C24.1328 13.3263 24.2957 13.3569 24.46 13.356C24.8526 13.3518 25.2428 13.2946 25.62 13.186C25.8166 13.1332 26.0108 13.0718 26.202 13.002L26.26 12.978L26.366 12.922C26.566 12.664 27.026 12.178 27.602 11.618C29.422 9.862 30.352 8.614 30.162 8.148C30.076 7.922 29.928 7.808 29.696 7.816ZM24.848 9.976C24.7 9.992 24.368 10.248 23.77 10.772C22.906 11.536 21.964 11.976 21.638 11.78C21.5622 11.7971 21.4862 11.8131 21.41 11.828C21.078 11.894 20.664 11.948 20.294 11.918C20.1197 11.9074 19.9488 11.8647 19.79 11.792C19.6402 11.7235 19.5207 11.6026 19.454 11.452C19.38 11.272 19.38 11.048 19.464 10.762L18.164 11.83L15.222 14.264V18.21L24.862 10.616C24.8601 10.5329 24.8709 10.4499 24.894 10.37C24.968 10.102 24.964 9.966 24.848 9.978V9.976ZM28.996 11.254C28.85 11.254 28.606 11.46 28.216 11.874C27.686 12.44 26.852 12.988 26.41 13.1L26.342 13.136C26.2694 13.166 26.1961 13.194 26.122 13.22C26.002 13.26 25.846 13.308 25.666 13.356C25.306 13.454 24.858 13.544 24.458 13.534C24.2694 13.5338 24.0827 13.4971 23.908 13.426C23.7434 13.3581 23.6115 13.2291 23.54 13.066C23.424 12.788 23.47 12.398 23.724 11.844L15.22 18.542V20.952H18.956L26.88 14.728C27.086 14.5 27.396 14.188 27.814 13.798C28.934 12.76 29.188 12.402 29.188 11.872C29.188 11.46 29.142 11.252 28.996 11.252V11.254ZM30.882 15.154L30.204 15.83C29.824 16.19 29.146 16.634 28.682 16.824L28.59 16.864L28.584 16.874L28.564 16.894C28.546 16.908 28.538 16.91 28.524 16.916C28.3388 16.9861 28.1506 17.0482 27.96 17.102C27.5362 17.2253 27.1004 17.3025 26.66 17.332C26.4518 17.3453 26.2428 17.3271 26.04 17.278C25.864 17.2393 25.7087 17.1366 25.604 16.99C25.508 16.842 25.48 16.644 25.534 16.4C25.577 16.2263 25.6407 16.0584 25.724 15.9L19.33 20.952H27.834L28.85 19.788C30.246 18.16 30.882 16.996 30.882 16V15.154Z"
+                fill="#000000" />
+            </svg>
+            <span>Styled Components</span>
+          </li>
+          <li>
+            <svg viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10">
+              <path
+                d="M489.5 226.499C328 231.632 280 346.999 269 409.499C283.333 386.332 328.5 335.5 395 335.5C472.5 335.5 531.5 422 567.5 449C611.237 481.803 699.123 525.115 814.5 490C906.5 462 949.167 364.332 958.5 317.999C914 378.499 846.5 414.838 763 371.999C705.5 342.499 662.5 221 489.5 226.499Z"
+                fill="#07B6D5" />
+              <path
+                d="M261 500.999C99.5 506.132 51.5 621.499 40.5 683.999C54.8333 660.832 100 610 166.5 610C244 610 303 696.5 339 723.5C382.737 756.303 470.623 799.615 586 764.5C678 736.5 720.667 638.832 730 592.499C685.5 652.999 618 689.338 534.5 646.499C477 616.999 434 495.5 261 500.999Z"
+                fill="#07B6D5" />
+            </svg>
+            <span>Tailwind</span>
+          </li>
+        </ul>
+        <h3>Backend</h3>
+        <ul>
+          <li>NodeJS</li>
+          <li>Express</li>
+          <li>MongoDB</li>
+          <li>Firebase</li>
+          <li>Python</li>
+        </ul>
+        <h3>Miscellaneous</h3>
+        <ul>
+          <li>Git</li>
+          <li>Jest</li>
+          <li>Heroku</li>
+        </ul>
+      </section>
+      <section id="projects">
+        <h2 class="text-xl font-semibold text-gray-800">Projects</h2>
+        <article>
+          <h3>OptomRx</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis architecto maiores aperiam, ea aliquid
+            dolores praesentium doloremque provident mollitia eveniet, iusto nisi, nam sed veritatis. Ab sed et officia
+            dolores.</p>
+        </article>
+        <article>
+          <h3>Odinbook</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis architecto maiores aperiam, ea aliquid
+            dolores praesentium doloremque provident mollitia eveniet, iusto nisi, nam sed veritatis. Ab sed et officia
+            dolores.</p>
+        </article>
+      </section>
+      <section id="contact">
+        <h2 class="text-xl font-semibold text-gray-800">Contact</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vero nisi. Quidem doloribus voluptatibus
+          architecto natus unde rem libero laboriosam totam deleniti nemo, impedit, ducimus id nobis, alias aspernatur
+          similique?</p>
+        <form class="rounded p-8">
+          <label for="name">
+            Name
+            <input
+              class="w-full mt-2 border rounded-sm border-slate-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400"
+              type="text" required>
+          </label>
+          <label for="email">
+            Email
+            <input
+              class="w-full mt-2 border rounded-sm border-slate-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400"
+              type="email" required>
+          </label>
+          <label for="message">
+            Message
+            <textarea
+              class="w-full mt-2 border rounded-sm border-slate-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400"
+              name="message" id="message" cols="30" rows="10" required></textarea>
+          </label>
+          <button>Send message</button>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p class="text-gray-700 text-sm">&copy; 2022 Daniel Moderiano</p>
+    </footer>
+  </div>
   <script type="module" src="./src/main.js"></script>
 </body>
+
 </html>
