--- a/index.html
+++ b/index.html
@@ -111,11 +111,96 @@
         <section>
           <h3>Backend</h3>
           <ul>
-            <li>NodeJS</li>
-            <li>Express</li>
-            <li>MongoDB</li>
-            <li>Firebase</li>
-            <li>Python</li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-10">
+                <path
+                  d="M224 508c-6.7 0-13.5-1.8-19.4-5.2l-61.7-36.5c-9.2-5.2-4.7-7-1.7-8 12.3-4.3 14.8-5.2 27.9-12.7 1.4-.8 3.2-.5 4.6.4l47.4 28.1c1.7 1 4.1 1 5.7 0l184.7-106.6c1.7-1 2.8-3 2.8-5V149.3c0-2.1-1.1-4-2.9-5.1L226.8 37.7c-1.7-1-4-1-5.7 0L36.6 144.3c-1.8 1-2.9 3-2.9 5.1v213.1c0 2 1.1 4 2.9 4.9l50.6 29.2c27.5 13.7 44.3-2.4 44.3-18.7V167.5c0-3 2.4-5.3 5.4-5.3h23.4c2.9 0 5.4 2.3 5.4 5.3V378c0 36.6-20 57.6-54.7 57.6-10.7 0-19.1 0-42.5-11.6l-48.4-27.9C8.1 389.2.7 376.3.7 362.4V149.3c0-13.8 7.4-26.8 19.4-33.7L204.6 9c11.7-6.6 27.2-6.6 38.8 0l184.7 106.7c12 6.9 19.4 19.8 19.4 33.7v213.1c0 13.8-7.4 26.7-19.4 33.7L243.4 502.8c-5.9 3.4-12.6 5.2-19.4 5.2zm149.1-210.1c0-39.9-27-50.5-83.7-58-57.4-7.6-63.2-11.5-63.2-24.9 0-11.1 4.9-25.9 47.4-25.9 37.9 0 51.9 8.2 57.7 33.8.5 2.4 2.7 4.2 5.2 4.2h24c1.5 0 2.9-.6 3.9-1.7s1.5-2.6 1.4-4.1c-3.7-44.1-33-64.6-92.2-64.6-52.7 0-84.1 22.2-84.1 59.5 0 40.4 31.3 51.6 81.8 56.6 60.5 5.9 65.2 14.8 65.2 26.7 0 20.6-16.6 29.4-55.5 29.4-48.9 0-59.6-12.3-63.2-36.6-.4-2.6-2.6-4.5-5.3-4.5h-23.9c-3 0-5.3 2.4-5.3 5.3 0 31.1 16.9 68.2 97.8 68.2 58.4-.1 92-23.2 92-63.4z" />
+              </svg>
+              <span>NodeJS</span>
+            </li>
+            <li>
+              <svg viewBox="0 0 52 30" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10">
+                <path
+                  d="M51.7026 29.1934C50.9501 29.478 50.1195 29.4774 49.3674 29.1917C48.6154 28.9059 47.9939 28.3548 47.6203 27.6424L40.188 17.3643L39.1109 15.9274L30.4873 27.6553C30.1361 28.3379 29.5484 28.8692 28.8339 29.1499C28.1195 29.4306 27.3272 29.4415 26.6053 29.1805L37.7171 14.2729L27.3808 0.806564C28.1241 0.538734 28.9369 0.535183 29.6824 0.79651C30.4279 1.05784 31.0606 1.56808 31.474 2.24131L39.1777 12.6465L46.9244 2.2844C47.2783 1.61396 47.8662 1.09693 48.5764 0.831615C49.2866 0.566296 50.0695 0.571181 50.7763 0.845341L46.765 6.16855L41.3319 13.241C41.181 13.3756 41.0603 13.5406 40.9776 13.7251C40.895 13.9096 40.8522 14.1095 40.8522 14.3117C40.8522 14.5139 40.895 14.7138 40.9776 14.8983C41.0603 15.0828 41.181 15.2478 41.3319 15.3824L51.6811 29.1956L51.7026 29.1934ZM0.00433439 14.0877L0.90913 9.61755C3.39516 0.77856 13.5289 -2.89879 20.5001 2.57307C24.5824 5.78078 25.6014 10.322 25.4011 15.4405H2.4042C2.03151 24.5811 8.62789 30.1004 17.0619 27.2804C18.4291 26.7883 19.6529 25.9647 20.6237 24.8834C21.5944 23.8021 22.2818 22.4969 22.6242 21.0847C23.0701 19.65 23.8048 19.4044 25.1533 19.818C24.9286 21.5681 24.3099 23.2445 23.3439 24.721C22.3778 26.1975 21.0895 27.4357 19.5759 28.3425C17.0757 29.7101 14.2071 30.2521 11.3802 29.8911C8.5534 29.5301 5.91307 28.2846 3.83679 26.3326C1.78383 24.0219 0.543067 21.103 0.303778 18.0214C0.303778 17.5151 0.131437 17.0412 0.0151058 16.5866C0.00461882 15.7544 -0.000407927 14.9221 2.58433e-05 14.0898L0.00433439 14.0877ZM2.4322 13.4715H23.2296C23.1003 6.845 18.9189 2.14437 13.3414 2.10128C7.13283 2.01511 2.69071 6.61233 2.41712 13.4414L2.4322 13.4715Z"
+                  fill="#000000" />
+              </svg>
+              <span>Express</span>
+            </li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 67" fill="#fff" fill-rule="evenodd" stroke="#000"
+                stroke-linecap="round" stroke-linejoin="round" class="w-10">
+                <g stroke="none" fill-rule="nonzero">
+                  <path
+                    d="M14.174.175l1.708 3.208c.371.579.804 1.117 1.29 1.604 1.43 1.43 2.788 2.928 4.008 4.532 2.894 3.8 4.846 8 6.24 12.584a30.94 30.94 0 0 1 1.324 8.54c.14 8.646-2.824 16.07-8.8 22.24-.972.978-2.022 1.876-3.14 2.684-.592 0-.872-.454-1.116-.872-.454-.766-.732-1.64-.872-2.51-.21-1.046-.348-2.092-.28-3.172v-.488c-.048-.124-.57-48.124-.362-48.35z"
+                    fill="#599636" />
+                  <path
+                    d="M14.174.069c-.07-.14-.14-.034-.21.034.034.7-.21 1.324-.592 1.92-.4.592-.976 1.046-1.534 1.534-3.1 2.684-5.54 5.926-7.494 9.552-2.6 4.88-3.94 10.11-4.32 15.616-.174 1.986.628 8.994 1.254 11.016 1.708 5.368 4.776 9.866 8.75 13.77a35.08 35.08 0 0 0 3.1 2.65c.314 0 .348-.28.4-.488a9.57 9.57 0 0 0 .314-1.36l.7-5.228L14.174.069z"
+                    fill="#6cac48" />
+                  <path
+                    d="M15.882 57.691c.07-.8.454-1.464.872-2.126-.4-.174-.732-.52-.976-.906a6.47 6.47 0 0 1-.52-1.15c-.488-1.464-.592-3-.732-4.496v-.906c-.174.14-.21 1.324-.21 1.5-.102 1.581-.312 3.154-.628 4.706-.104.628-.174 1.254-.56 1.812 0 .07 0 .14.034.244.628 1.848.8 3.73.906 5.648v.7c0 .836-.034.66.66.94.28.104.592.14.872.348.21 0 .244-.174.244-.314l-.104-1.15v-3.208c-.034-.56.07-1.116.14-1.64z"
+                    fill="#c2bfbf" />
+                </g>
+              </svg>
+              <span>MongoDB</span>
+            </li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192" class="w-10">
+                <defs>
+                  <linearGradient id="d" x1="-108.63" y1="-692.24" x2="-58.56" y2="-742.31"
+                    gradientTransform="matrix(2.67 0 0 -2.67 317.23 -1808)" gradientUnits="userSpaceOnUse">
+                    <stop offset="0" stop-color="#fff" stop-opacity=".1"></stop>
+                    <stop offset="1" stop-color="#fff" stop-opacity="0"></stop>
+                  </linearGradient>
+                  <linearGradient id="b" x1="56.9" y1="102.54" x2="48.9" y2="98.36" gradientUnits="userSpaceOnUse">
+                    <stop offset="0" stop-color="#a52714"></stop>
+                    <stop offset=".4" stop-color="#a52714" stop-opacity=".5"></stop>
+                    <stop offset=".8" stop-color="#a52714" stop-opacity="0"></stop>
+                  </linearGradient>
+                  <linearGradient id="c" x1="90.89" y1="90.91" x2="87.31" y2="87.33" gradientUnits="userSpaceOnUse">
+                    <stop offset="0" stop-color="#a52714" stop-opacity=".8"></stop>
+                    <stop offset=".5" stop-color="#a52714" stop-opacity=".21"></stop>
+                    <stop offset="1" stop-color="#a52714" stop-opacity="0"></stop>
+                  </linearGradient>
+                  <clipPath id="a">
+                    <path
+                      d="M143.41 47.34a4 4 0 00-6.77-2.16L115.88 66 99.54 34.89a4 4 0 00-7.08 0l-8.93 17-22.4-41.77a4 4 0 00-7.48 1.28L32 150l57.9 32.46a12 12 0 0011.7 0L160 150z">
+                    </path>
+                  </clipPath>
+                </defs>
+                <g clip-path="url(#a)">
+                  <path d="M32 150L53.66 11.39a4 4 0 017.48-1.27l22.4 41.78 8.93-17a4 4 0 017.08 0L160 150z"
+                    fill="#ffa000"></path>
+                  <path opacity=".12" fill="url(#b)" d="M106 9L0 0v192l32-42L106 9z"></path>
+                  <path d="M106.83 96.01l-23.3-44.12L32 150l74.83-53.99z" fill="#f57c00"></path>
+                  <path opacity=".2" fill="url(#c)" d="M0 0h192v192H0z"></path>
+                  <path d="M160 150L143.41 47.34a4 4 0 00-6.77-2.16L32 150l57.9 32.47a12 12 0 0011.7 0z" fill="#ffca28">
+                  </path>
+                  <path
+                    d="M143.41 47.34a4 4 0 00-6.77-2.16L115.88 66 99.54 34.89a4 4 0 00-7.08 0l-8.93 17-22.4-41.77a4 4 0 00-7.48 1.28L32 150h-.08l.07.08.57.28L115.83 67l20.78-20.8a4 4 0 016.78 2.16l16.45 101.74.16-.1zM32.19 149.81L53.66 12.39a4 4 0 017.48-1.28l22.4 41.78 8.93-17a4 4 0 017.08 0l16 30.43z"
+                    fill="#fff" fill-opacity=".2"></path>
+                  <path
+                    d="M101.6 181.49a12 12 0 01-11.7 0l-57.76-32.4-.14.91 57.9 32.46a12 12 0 0011.7 0L160 150l-.15-.92z"
+                    style="isolation:isolate" fill="#a52714" opacity=".2"></path>
+                  <path
+                    d="M143.41 47.34a4 4 0 00-6.77-2.16L115.88 66 99.54 34.89a4 4 0 00-7.08 0l-8.93 17-22.4-41.77a4 4 0 00-7.48 1.28L32 150l57.9 32.46a12 12 0 0011.7 0L160 150z"
+                    fill="url(#d)"></path>
+                </g>
+              </svg>
+              <span>Firebase</span>
+            </li>
+            <li>
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 40 40" class="w-10">
+                <rect x="10" y="0" width="20" height="40" rx="10" ry="5" />
+                <rect x="0" y="10" width="40" height="20" rx="5" ry="10" />
+                <circle cx="14.5" cy="5" r="1.85" fill="white" />
+                <circle cx="25.5" cy="35" r="1.85" fill="white" />
+                <line x1="10" y1="9.5" x2="20" y2="9.5" stroke="white" />
+                <line x1="20" y1="30.5" x2="30" y2="30.5" stroke="white" />
+                <path d="m 9.5,30 c 0,-10 2.5,-10 10,-10 8.5,0 11,0 11,-10" stroke="white" fill="none" />
+              </svg>
+              <span>Python</span>
+            </li>
           </ul>
         </section>
 
@@ -139,15 +224,11 @@
               <span>Git</span>
             </li>
             <li>
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 60 66"
-                fill="#fff" fill-rule="evenodd" stroke="#000" stroke-linecap="round" stroke-linejoin="round"
-                class="w-10">
-                <use xlink:href="#A" x=".5" y=".5" />
-                <symbol id="A" overflow="visible">
-                  <path
-                    d="M56.453 31.518c0-3.854-2.65-7.097-6.207-8.023L58.214 0H18.717l7.986 23.57c-3.446 1-5.985 4.188-5.985 7.968 0 2.78 1.4 5.244 3.502 6.763-.85 1.199-1.819 2.31-2.89 3.317-2.057 1.927-4.336 3.4-6.8 4.4-2.224-1.5-3.187-4.15-2.316-6.522a8.29 8.29 0 0 0 5.855-7.93c0-4.577-3.724-8.283-8.283-8.283-4.577 0-8.3 3.724-8.3 8.3a8.24 8.24 0 0 0 2.409 5.818l-.4.797c-1.24 2.557-2.65 5.448-3.187 8.7-1.075 6.485.686 11.692 4.93 14.638 2.4 1.65 5.02 2.483 7.856 2.483 4.873 0 9.82-2.446 14.6-4.818 3.4-1.686 6.93-3.446 10.395-4.3 1.28-.315 2.613-.5 4.02-.704 2.854-.408 5.8-.834 8.45-2.372 3.094-1.797 5.207-4.8 5.818-8.246.463-2.65 0-5.318-1.186-7.653.797-1.28 1.24-2.78 1.24-4.4zm-3.613 0c0 2.576-2.094 4.67-4.67 4.67s-4.67-2.094-4.67-4.67a4.81 4.81 0 0 1 .6-2.316 5.05 5.05 0 0 1 .52-.74c.193-.227.411-.432.649-.611l.02-.02.482-.334s.02 0 .02-.02c.074-.037.148-.093.222-.13.02 0 .037-.02.056-.02.074-.037.167-.074.26-.1.088-.033.175-.07.26-.11.02 0 .037-.02.056-.02.074-.02.148-.056.222-.074.02 0 .056-.02.074-.02l.26-.056h.02l.278-.056c.02 0 .056 0 .074-.02.074 0 .148-.02.222-.02h.093c.093 0 .185-.02.296-.02h.24a.76.76 0 0 1 .204.019h.037c.148.02.296.037.445.074a4.71 4.71 0 0 1 3.724 4.595zM23.897 3.706h29.147l-6.7 19.734c-.278.056-.556.148-.834.24L38.47 9.32l-7.06 14.268c-.278-.093-.574-.148-.87-.204zm13.248 26.2a8.22 8.22 0 0 0-2.5-4.447l3.836-7.745 3.873 7.912a8.37 8.37 0 0 0-2.316 4.28zm-9.283-2.928l.26-.056h.056c.074-.02.148-.02.222-.037h.074c.074 0 .13-.02.204-.02h.723c.074 0 .13.02.185.02.037 0 .056 0 .093.02.074.02.13.02.204.037.02 0 .037 0 .074.02l.26.056c.093.02.167.037.24.074.02 0 .037.02.074.02.056.02.13.037.185.074.02 0 .037.02.056.02.074.037.148.056.222.093h.02a1 1 0 0 1 .241.13c.093.037.167.093.24.13.02 0 .02.02.037.02.074.037.13.093.204.13l.02.02c.222.167.426.352.63.537l.02.02c.185.204.37.426.52.667a4.66 4.66 0 0 1 .76 2.557c0 2.576-2.094 4.67-4.67 4.67s-4.67-2.094-4.67-4.67c-.02-2.168 1.482-4.002 3.52-4.52zm-18.233-.13c2.576 0 4.67 2.094 4.67 4.67s-2.094 4.67-4.67 4.67-4.67-2.094-4.67-4.67 2.094-4.67 4.67-4.67zm43.1 16.065c-.408 2.372-1.87 4.447-4.02 5.688-2.02 1.167-4.503 1.538-7.115 1.9-1.427.204-2.928.426-4.373.778-3.854.945-7.56 2.798-11.155 4.577-4.595 2.28-8.93 4.428-12.952 4.428-2.094 0-3.965-.593-5.744-1.834-4.076-2.816-3.873-8.097-3.4-10.988.445-2.705 1.686-5.244 2.872-7.67.074-.148.13-.278.204-.426.415.15.844.262 1.28.334-.704 3.928 1.297 7.986 5.188 9.987l.704.37.76-.278c3.243-1.15 6.244-3.02 8.894-5.522 1.464-1.365 2.758-2.902 3.854-4.577.426.074.852.093 1.28.093 3.854 0 7.097-2.65 8.023-6.207h3.113c.926 3.576 4.17 6.207 8.023 6.207a8.2 8.2 0 0 0 4.188-1.149c.482 1.4.63 2.835.37 4.28z"
-                    stroke="none" fill="#99424f" fill-rule="nonzero" />
-                </symbol>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 66" fill="#fff" fill-rule="evenodd" stroke="#000"
+                stroke-linecap="round" stroke-linejoin="round" class="w-10">
+                <path
+                  d="M56.453 31.518c0-3.854-2.65-7.097-6.207-8.023L58.214 0H18.717l7.986 23.57c-3.446 1-5.985 4.188-5.985 7.968 0 2.78 1.4 5.244 3.502 6.763-.85 1.199-1.819 2.31-2.89 3.317-2.057 1.927-4.336 3.4-6.8 4.4-2.224-1.5-3.187-4.15-2.316-6.522a8.29 8.29 0 0 0 5.855-7.93c0-4.577-3.724-8.283-8.283-8.283-4.577 0-8.3 3.724-8.3 8.3a8.24 8.24 0 0 0 2.409 5.818l-.4.797c-1.24 2.557-2.65 5.448-3.187 8.7-1.075 6.485.686 11.692 4.93 14.638 2.4 1.65 5.02 2.483 7.856 2.483 4.873 0 9.82-2.446 14.6-4.818 3.4-1.686 6.93-3.446 10.395-4.3 1.28-.315 2.613-.5 4.02-.704 2.854-.408 5.8-.834 8.45-2.372 3.094-1.797 5.207-4.8 5.818-8.246.463-2.65 0-5.318-1.186-7.653.797-1.28 1.24-2.78 1.24-4.4zm-3.613 0c0 2.576-2.094 4.67-4.67 4.67s-4.67-2.094-4.67-4.67a4.81 4.81 0 0 1 .6-2.316 5.05 5.05 0 0 1 .52-.74c.193-.227.411-.432.649-.611l.02-.02.482-.334s.02 0 .02-.02c.074-.037.148-.093.222-.13.02 0 .037-.02.056-.02.074-.037.167-.074.26-.1.088-.033.175-.07.26-.11.02 0 .037-.02.056-.02.074-.02.148-.056.222-.074.02 0 .056-.02.074-.02l.26-.056h.02l.278-.056c.02 0 .056 0 .074-.02.074 0 .148-.02.222-.02h.093c.093 0 .185-.02.296-.02h.24a.76.76 0 0 1 .204.019h.037c.148.02.296.037.445.074a4.71 4.71 0 0 1 3.724 4.595zM23.897 3.706h29.147l-6.7 19.734c-.278.056-.556.148-.834.24L38.47 9.32l-7.06 14.268c-.278-.093-.574-.148-.87-.204zm13.248 26.2a8.22 8.22 0 0 0-2.5-4.447l3.836-7.745 3.873 7.912a8.37 8.37 0 0 0-2.316 4.28zm-9.283-2.928l.26-.056h.056c.074-.02.148-.02.222-.037h.074c.074 0 .13-.02.204-.02h.723c.074 0 .13.02.185.02.037 0 .056 0 .093.02.074.02.13.02.204.037.02 0 .037 0 .074.02l.26.056c.093.02.167.037.24.074.02 0 .037.02.074.02.056.02.13.037.185.074.02 0 .037.02.056.02.074.037.148.056.222.093h.02a1 1 0 0 1 .241.13c.093.037.167.093.24.13.02 0 .02.02.037.02.074.037.13.093.204.13l.02.02c.222.167.426.352.63.537l.02.02c.185.204.37.426.52.667a4.66 4.66 0 0 1 .76 2.557c0 2.576-2.094 4.67-4.67 4.67s-4.67-2.094-4.67-4.67c-.02-2.168 1.482-4.002 3.52-4.52zm-18.233-.13c2.576 0 4.67 2.094 4.67 4.67s-2.094 4.67-4.67 4.67-4.67-2.094-4.67-4.67 2.094-4.67 4.67-4.67zm43.1 16.065c-.408 2.372-1.87 4.447-4.02 5.688-2.02 1.167-4.503 1.538-7.115 1.9-1.427.204-2.928.426-4.373.778-3.854.945-7.56 2.798-11.155 4.577-4.595 2.28-8.93 4.428-12.952 4.428-2.094 0-3.965-.593-5.744-1.834-4.076-2.816-3.873-8.097-3.4-10.988.445-2.705 1.686-5.244 2.872-7.67.074-.148.13-.278.204-.426.415.15.844.262 1.28.334-.704 3.928 1.297 7.986 5.188 9.987l.704.37.76-.278c3.243-1.15 6.244-3.02 8.894-5.522 1.464-1.365 2.758-2.902 3.854-4.577.426.074.852.093 1.28.093 3.854 0 7.097-2.65 8.023-6.207h3.113c.926 3.576 4.17 6.207 8.023 6.207a8.2 8.2 0 0 0 4.188-1.149c.482 1.4.63 2.835.37 4.28z"
+                  stroke="none" fill="#99424f" fill-rule="nonzero" />
               </svg>
               <span>Jest</span>
             </li>
