--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Personal Portfolio</title>
 </head>
 
-<body >
+<body>
   <!--#include file="./src/pages/projects.html" -->
   <div class="flex items-center flex-col mx-12">
 
@@ -124,7 +124,7 @@
           <ul class="grid grid-cols-3">
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-10 h-10">
-                <path
+                <path fill="#689F63"
                   d="M224 508c-6.7 0-13.5-1.8-19.4-5.2l-61.7-36.5c-9.2-5.2-4.7-7-1.7-8 12.3-4.3 14.8-5.2 27.9-12.7 1.4-.8 3.2-.5 4.6.4l47.4 28.1c1.7 1 4.1 1 5.7 0l184.7-106.6c1.7-1 2.8-3 2.8-5V149.3c0-2.1-1.1-4-2.9-5.1L226.8 37.7c-1.7-1-4-1-5.7 0L36.6 144.3c-1.8 1-2.9 3-2.9 5.1v213.1c0 2 1.1 4 2.9 4.9l50.6 29.2c27.5 13.7 44.3-2.4 44.3-18.7V167.5c0-3 2.4-5.3 5.4-5.3h23.4c2.9 0 5.4 2.3 5.4 5.3V378c0 36.6-20 57.6-54.7 57.6-10.7 0-19.1 0-42.5-11.6l-48.4-27.9C8.1 389.2.7 376.3.7 362.4V149.3c0-13.8 7.4-26.8 19.4-33.7L204.6 9c11.7-6.6 27.2-6.6 38.8 0l184.7 106.7c12 6.9 19.4 19.8 19.4 33.7v213.1c0 13.8-7.4 26.7-19.4 33.7L243.4 502.8c-5.9 3.4-12.6 5.2-19.4 5.2zm149.1-210.1c0-39.9-27-50.5-83.7-58-57.4-7.6-63.2-11.5-63.2-24.9 0-11.1 4.9-25.9 47.4-25.9 37.9 0 51.9 8.2 57.7 33.8.5 2.4 2.7 4.2 5.2 4.2h24c1.5 0 2.9-.6 3.9-1.7s1.5-2.6 1.4-4.1c-3.7-44.1-33-64.6-92.2-64.6-52.7 0-84.1 22.2-84.1 59.5 0 40.4 31.3 51.6 81.8 56.6 60.5 5.9 65.2 14.8 65.2 26.7 0 20.6-16.6 29.4-55.5 29.4-48.9 0-59.6-12.3-63.2-36.6-.4-2.6-2.6-4.5-5.3-4.5h-23.9c-3 0-5.3 2.4-5.3 5.3 0 31.1 16.9 68.2 97.8 68.2 58.4-.1 92-23.2 92-63.4z" />
               </svg>
               <span class="text-xs">NodeJS</span>
@@ -200,16 +200,30 @@
               <span class="text-xs">Firebase</span>
             </li>
             <li class="flex flex-col items-center justify-center">
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 40 40" class="w-10 h-10">
-                <rect x="10" y="0" width="20" height="40" rx="10" ry="5" />
-                <rect x="0" y="10" width="40" height="20" rx="5" ry="10" />
-                <circle cx="14.5" cy="5" r="1.85" fill="white" />
-                <circle cx="25.5" cy="35" r="1.85" fill="white" />
-                <line x1="10" y1="9.5" x2="20" y2="9.5" stroke="white" />
-                <line x1="20" y1="30.5" x2="30" y2="30.5" stroke="white" />
-                <path d="m 9.5,30 c 0,-10 2.5,-10 10,-10 8.5,0 11,0 11,-10" stroke="white" fill="none" />
+              <svg viewBox="0 0 256 255" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" class="w-10 h-10">
+                <defs>
+                  <linearGradient x1="12.9593594%" y1="12.0393928%" x2="79.6388325%" y2="78.2008538%"
+                    id="linearGradient-1">
+                    <stop stop-color="#387EB8" offset="0%"></stop>
+                    <stop stop-color="#366994" offset="100%"></stop>
+                  </linearGradient>
+                  <linearGradient x1="19.127525%" y1="20.5791813%" x2="90.7415328%" y2="88.4290372%"
+                    id="linearGradient-2">
+                    <stop stop-color="#FFE052" offset="0%"></stop>
+                    <stop stop-color="#FFC331" offset="100%"></stop>
+                  </linearGradient>
+                </defs>
+                <g>
+                  <path
+                    d="M126.915866,0.0722755491 C62.0835831,0.0722801733 66.1321288,28.1874648 66.1321288,28.1874648 L66.2044043,57.3145115 L128.072276,57.3145115 L128.072276,66.0598532 L41.6307171,66.0598532 C41.6307171,66.0598532 0.144551098,61.3549438 0.144551098,126.771315 C0.144546474,192.187673 36.3546019,189.867871 36.3546019,189.867871 L57.9649915,189.867871 L57.9649915,159.51214 C57.9649915,159.51214 56.8001363,123.302089 93.5968379,123.302089 L154.95878,123.302089 C154.95878,123.302089 189.434218,123.859386 189.434218,89.9830604 L189.434218,33.9695088 C189.434218,33.9695041 194.668541,0.0722755491 126.915866,0.0722755491 L126.915866,0.0722755491 L126.915866,0.0722755491 Z M92.8018069,19.6589497 C98.9572068,19.6589452 103.932242,24.6339846 103.932242,30.7893845 C103.932246,36.9447844 98.9572068,41.9198193 92.8018069,41.9198193 C86.646407,41.9198239 81.6713721,36.9447844 81.6713721,30.7893845 C81.6713674,24.6339846 86.646407,19.6589497 92.8018069,19.6589497 L92.8018069,19.6589497 L92.8018069,19.6589497 Z"
+                    fill="url(#linearGradient-1)"></path>
+                  <path
+                    d="M128.757101,254.126271 C193.589403,254.126271 189.540839,226.011081 189.540839,226.011081 L189.468564,196.884035 L127.600692,196.884035 L127.600692,188.138693 L214.042251,188.138693 C214.042251,188.138693 255.528417,192.843589 255.528417,127.427208 C255.52844,62.0108566 219.318366,64.3306589 219.318366,64.3306589 L197.707976,64.3306589 L197.707976,94.6863832 C197.707976,94.6863832 198.87285,130.896434 162.07613,130.896434 L100.714182,130.896434 C100.714182,130.896434 66.238745,130.339138 66.238745,164.215486 L66.238745,220.229038 C66.238745,220.229038 61.0044225,254.126271 128.757101,254.126271 L128.757101,254.126271 L128.757101,254.126271 Z M162.87116,234.539597 C156.715759,234.539597 151.740726,229.564564 151.740726,223.409162 C151.740726,217.253759 156.715759,212.278727 162.87116,212.278727 C169.026563,212.278727 174.001595,217.253759 174.001595,223.409162 C174.001618,229.564564 169.026563,234.539597 162.87116,234.539597 L162.87116,234.539597 L162.87116,234.539597 Z"
+                    fill="url(#linearGradient-2)"></path>
+                </g>
               </svg>
+
               <span class="text-xs">Python</span>
             </li>
           </ul>
@@ -249,7 +263,7 @@
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                 style="enable-background:new 0 0 512 512;" xml:space="preserve" class="w-10 h-10">
                 <g>
-                  <path
+                  <path fill="#430098"
                     d="M440.4,0H71.7C46.3,0,25.6,20.6,25.6,46.1v419.8c0,25.5,20.7,46.1,46.1,46.1h368.7c25.4,0,46.1-20.6,46.1-46.1 V46.1C486.4,20.6,465.8,0,440.4,0z M460.8,465.9c0,11.3-9.2,20.5-20.5,20.5H71.7c-11.3,0-20.5-9.2-20.5-20.5V46.1	c0-11.3,9.2-20.5,20.5-20.5h368.7c11.3,0,20.5,9.2,20.5,20.5V465.9z M140.8,435.2l57.6-51.2l-57.6-51.2V435.2z M348.9,227.7	c-10.4-10.4-29.3-22.9-60.9-22.9c-34.7,0-70.5,9-96,17.3V76.8h-51.2v222l36.2-16.4c0.6-0.3,58.9-26.4,111-26.4 c26,0,31.7,14.3,32,26.3v152.9h51.2V281.6C371.3,278.3,370.9,249.9,348.9,227.7 M281.6,160h51.2c23.1-26.2,34.9-54.1,38.4-83.2	h-51.2C314.3,105.8,301.7,133.6,281.6,160" />
                 </g>
               </svg>
