Adjust tailwind logo colours and swap to a better contrast react logo

--- a/index.html
+++ b/index.html
@@ -80,15 +80,32 @@
               <span class="text-xs">JavaScript</span>
             </li>
             <li class="flex flex-col items-center justify-center">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.5 -10.23174 23 20.46348" class="w-10 h-10">
-                <circle cx="0" cy="0" r="2.05" fill="#61dafb" />
-                <g stroke="#61dafb" stroke-width="1" fill="none">
-                  <ellipse rx="11" ry="4.2" />
-                  <ellipse rx="11" ry="4.2" transform="rotate(60)" />
-                  <ellipse rx="11" ry="4.2" transform="rotate(120)" />
-                </g>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.43 29.43" class="w-10 h-10">
+                <circle cx="14.71" cy="14.71" r="14.71" fill="#1f252d" />
+                <circle cx="14.71" cy="14.71" r="2.05" fill="#70cff0" />
+                <ellipse cx="14.71" cy="14.71" rx="11" ry="4.2" fill="none" stroke="#70cff0" />
+                <ellipse cx="200.5" cy="418.23" rx="4.2" ry="11" transform="translate(-368.04 -247.23) rotate(-30)"
+                fill="none" stroke="#70cff0" />
+                <ellipse cx="200.5" cy="418.23" rx="11" ry="4.2" transform="translate(-447.73 -20.76) rotate(-60)"
+                fill="none" stroke="#70cff0" />
               </svg>
               <span class="text-xs">React</span>
+            </li>
+
+            <li class="flex flex-col items-center justify-center">
+              <svg viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10 h-10">
+                <path
+                  d="M489.5 226.499C328 231.632 280 346.999 269 409.499C283.333 386.332 328.5 335.5 395 335.5C472.5 335.5 531.5 422 567.5 449C611.237 481.803 699.123 525.115 814.5 490C906.5 462 949.167 364.332 958.5 317.999C914 378.499 846.5 414.838 763 371.999C705.5 342.499 662.5 221 489.5 226.499Z"
+                  fill="#38bdf8" />
+                <path
+                  d="M261 500.999C99.5 506.132 51.5 621.499 40.5 683.999C54.8333 660.832 100 610 166.5 610C244 610 303 696.5 339 723.5C382.737 756.303 470.623 799.615 586 764.5C678 736.5 720.667 638.832 730 592.499C685.5 652.999 618 689.338 534.5 646.499C477 616.999 434 495.5 261 500.999Z"
+                  fill="#38bdf8" />
+              </svg>
+              <span class="text-xs">Tailwind</span>
+            </li>
+            <li class="flex flex-col items-center justify-center">
+              <img src="./src/assets/icons/styled-components.png" alt="styled components logo" class="w-10 h-10">
+              <span class="text-xs text-center">Styled Components</span>
             </li>
             <li class="flex flex-col items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 774 875.7" class="w-10 h-10">
@@ -99,21 +116,6 @@
                   d="M373 649.3L185.4 546.1V341.8L373 450.1v199.2zm26.8 0l187.6-103.1V341.8L399.8 450.1v199.2zm-13.4-207zM198.1 318.2l188.3-103.5 188.3 103.5-188.3 108.7-188.3-108.7z" />
               </svg>
               <span class="text-xs">Webpack</span>
-            </li>
-            <li class="flex flex-col items-center justify-center">
-              <img src="./src/assets/icons/styled-components.png" alt="styled components logo" class="w-10 h-10">
-              <span class="text-xs text-center">Styled Components</span>
-            </li>
-            <li class="flex flex-col items-center justify-center">
-              <svg viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-10 h-10">
-                <path
-                  d="M489.5 226.499C328 231.632 280 346.999 269 409.499C283.333 386.332 328.5 335.5 395 335.5C472.5 335.5 531.5 422 567.5 449C611.237 481.803 699.123 525.115 814.5 490C906.5 462 949.167 364.332 958.5 317.999C914 378.499 846.5 414.838 763 371.999C705.5 342.499 662.5 221 489.5 226.499Z"
-                  fill="#07B6D5" />
-                <path
-                  d="M261 500.999C99.5 506.132 51.5 621.499 40.5 683.999C54.8333 660.832 100 610 166.5 610C244 610 303 696.5 339 723.5C382.737 756.303 470.623 799.615 586 764.5C678 736.5 720.667 638.832 730 592.499C685.5 652.999 618 689.338 534.5 646.499C477 616.999 434 495.5 261 500.999Z"
-                  fill="#07B6D5" />
-              </svg>
-              <span class="text-xs">Tailwind</span>
             </li>
           </ul>
         </section>
