--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body class="relative">
+
+  <!-- Adds a background 'shadow' or 'veil' to better empahasise the opened nav menu. Not relevant for screen readers -->
+  <div id="veil" aria-hidden="true" class="w-full bg-gray-800 h-full absolute top-0 left opacity-0 transition-opacity"></div>
   
     <!-- HAMBURGER BUTTON -->
 
@@ -19,23 +22,25 @@
     </button>
 
     <!-- Test mobile nav -->
-    <!-- <nav id="mainmenu" role="navigation" aria-label="Main menu" class="shadow-md absolute w-8/12 h-full bg-blue-400 -left-full transition-all"> -->
-    <nav id="mainmenu" role="navigation" aria-label="Main menu" class="shadow-md absolute w-8/12 h-full bg-blue-400 left-0 transition-all">
-      <ul class="flex flex-col items-center" role="menubar">
-        <li class="px-2" role="none">
-          <a class="hover:underline" href="#intro" role="menuitem">Intro</a>
+    <nav id="mainmenu" role="navigation" aria-label="Main menu" class="shadow-md absolute w-8/12 h-full bg-blue-400 -left-full transition-all">
+   
+    <!-- <nav id="mainmenu" role="navigation" aria-label="Main menu" class="shadow-md absolute w-8/12 h-full bg-blue-400 left-0 transition-all"> -->
+      <ul class="flex flex-col items-center w-full mt-16" role="menubar">
+        <li class="py-3 px-6 w-full text-left" role="none">
+          <a class="hover:underline font-semibold text-lg" href="#intro" role="menuitem">Intro</a>
         </li>
-        <li class="px-2" role="none">
-          <a class="hover:underline" href="#skills" role="menuitem">Technologies</a>
+        <li class="py-3 px-6 w-full text-left" role="none">
+          <a class="hover:underline font-semibold text-lg" href="#skills" role="menuitem">Technologies</a>
         </li>
-        <li class="px-2" role="none">
-          <a class="hover:underline" href="#projects" role="menuitem">Projects</a>
+        <li class="py-3 px-6 w-full text-left" role="none">
+          <a class="hover:underline font-semibold text-lg" href="#projects" role="menuitem">Projects</a>
         </li>
-        <li class="px-2" role="none">
-          <a class="hover:underline" href="#contact" role="menuitem">Contact</a>
+        <li class="py-3 px-6 w-full text-left" role="none">
+          <a class="hover:underline font-semibold text-lg" href="#contact" role="menuitem">Contact</a>
         </li>
       </ul>
     </nav>
+
 
 
   <!--#include file="./src/pages/projects.html" -->
