Adjust to Work Sans font

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
   <title>Personal Portfolio</title>
 </head>
 
 <body class="relative">
 
   <header role="banner"
-    class="px-2 py-3 text-black shadow-sm fixed top-0 left-0 w-full font-light text-lg bg-white/90 backdrop-blur-sm transition-all duration-300">
+    class="px-2 py-3 text-black shadow-sm fixed top-0 left-0 w-full font-light text-base bg-white/90 backdrop-blur-sm transition-all duration-300">
     <nav id="mainmenu" role="navigation" aria-label="Main menu">
       <ul class="flex items-center justify-evenly" role="menubar">
         <li class="px-2" role="none">
@@ -76,7 +75,7 @@
 
       <!-- PROJECTS section -->
       <section id="projects" class="w-full">
-        <h2 class="font-semibold text-3xl text-gray-800 mb-7 mt-20">
+        <h2 class="font-semibold text-3xl text-gray-800 mb-8 mt-[86px]">
           Projects
         </h2>
 
@@ -132,7 +131,7 @@
       <!-- ABOUT section -->
       <!-- If issues with SVG flashing on load continue, add explicit height/width properties to the SVG tag itself -->
       <section id="about" class="w-full">
-        <h2 class="font-semibold text-3xl text-gray-800 mb-6 mt-20">
+        <h2 class="font-semibold text-3xl text-gray-800 mb-7 mt-[86px]">
           About me
         </h2>
 
@@ -140,8 +139,8 @@
           cumque. Nulla quasi voluptates non omnis dolor doloremque rerum sapiente? Expedita rem odit accusantium eos
           dolorem!</p>
 
-        <section class="flex flex-col">
-          <h3 class="font-semibold text-xl">My Toolkit</h3>
+        <section class="flex flex-col mt-6">
+          <h3 class="mb-1">My toolkit includes the following:</h3>
 
           <section class="my-3">
             <h4 class="font-light uppercase text-sm border-b mb-3 w-32">Frontend</h4>
@@ -332,7 +331,7 @@
 
       <!-- CONTACT FORM section -->
       <section id="contact" class="mb-20 w-full">
-        <h2 class="font-semibold text-3xl text-gray-800 mb-2 mt-20">
+        <h2 class="font-semibold text-3xl text-gray-800 mb-2 mt-[86px]">
           Contact Me
         </h2>
         <p class="text-sm text-slate-600 italic">Please fill out all fields</p>
@@ -356,7 +355,7 @@
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
               name="message" id="message" cols="30" rows="10" required></textarea>
           </label>
-          <button class="rounded py-2 px-4 bg-blue-700 text-white font-semibold">Send message</button>
+          <button class="rounded-md py-2 px-4 bg-slate-600 text-white font-semibold">Send message</button>
         </form>
       </section>
 
